accessibility/objc_helpers.h

// Use void* to avoid type conflicts/ARC issues
typedef void *V_ID;
typedef void *V_SEL;
typedef V_ID (*FN_MSG_SEND)(V_ID, V_SEL, ...);
typedef V_ID (*FN_MSG_SEND_STR)(V_ID, V_SEL, const char *);
typedef NSRect (*FN_MSG_SEND_NSRECT)(V_ID, V_SEL, ...);
typedef void (*FN_MSG_SEND_SETFRAME)(V_ID, V_SEL, NSRect, ...);
typedef void (*FN_MSG_SEND_VOID_ID)(V_ID, V_SEL, V_ID);
// Wrappers to handle ARC casting for V (voidptr)
static inline V_ID v_objc_getClass(const char *name) {
  return (__bridge void *)objc_getClass(name);
}
static inline V_SEL v_sel_registerName(const char *name) {
  return sel_registerName(name);
}
static inline V_ID v_msgSend(V_ID obj, V_SEL sel, V_ID arg1) {
  // Basic 1-arg wrapper
  return ((FN_MSG_SEND)objc_msgSend)(obj, sel, arg1);
}
static inline V_ID v_msgSend_0(V_ID obj, V_SEL sel) {
  return ((FN_MSG_SEND)objc_msgSend)(obj, sel);
}
static inline V_ID v_msgSend_str(V_ID obj, V_SEL sel, const char *str) {
  return ((FN_MSG_SEND_STR)objc_msgSend)(obj, sel, str);
}
static inline NSRect v_msgSend_nsrect(V_ID obj, V_SEL sel) {
  return ((FN_MSG_SEND_NSRECT)objc_msgSend)(obj, sel);
}
static inline void v_msgSend_setFrame(V_ID obj, V_SEL sel, NSRect rect) {
  ((FN_MSG_SEND_SETFRAME)objc_msgSend)(obj, sel, rect);
}
static inline void v_msgSend_void_id(V_ID obj, V_SEL sel, V_ID arg1) {
  ((FN_MSG_SEND_VOID_ID)objc_msgSend)(obj, sel, arg1);
}